force-app/main/default/objects/LLC_BI__DocTab__c/LLC_BI__DocTab__c.object-meta.xml
<CustomObject>
    <label>DocTab</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocTabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>