force-app/main/default/objects/LLC_BI__DocTab__c/fields/LLC_BI__columns__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__columns__c</fullName>
    <description>This field defines which columns are shown in classic Document Manager. An admin should specify, at a minimum, the Name column. This field is a semi-colon delimited list.</description>
    <inlineHelpText>exists;name;docType;firstReview;exceptionDate;status;comment;owner</inlineHelpText>
    <label>columns</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>