force-app/main/default/objects/LLC_BI__DocTab__c/fields/LLC_BI__docManager__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required, but an admin must populate it for the tab to appear in classic Document Manager. This field associates a tab with a specific DocManager record.</description>
    <label>DocManager</label>
    <referenceTo>LLC_BI__DocManager__c</referenceTo>
    <relationshipLabel>DocTabs</relationshipLabel>
    <relationshipName>DocTabs</relationshipName>
    <type>Lookup</type>
</CustomField>