force-app/main/default/objects/LLC_BI__DocTab__c/fields/LLC_BI__status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__status__c</fullName>
    <description>This field is not currently used.</description>
    <label>status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Closer Updated</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>In File</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Recorded Doc/Policy</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>